Removes unneeded flex that caused an issue with the image cropper datatype
Fixes #10876

--- a/src/Umbraco.Web.UI.Client/src/less/property-editors.less
+++ b/src/Umbraco.Web.UI.Client/src/less/property-editors.less
@@ -600,7 +600,6 @@
         display: inline-block;
         position: relative;
         vertical-align: top;
-        flex:0;
     }
 
     .umb-cropper-gravity .gravity-container {
